tests/errors/nint_overflow.f90
program nint_overflow
    print*, nint(1e12_8)
    print*, nint(1000000000000.0000000000000000d0)
end program